[gd_scene load_steps=2 format=3 uid="uid://cubug6yioq4yr"]

[ext_resource type="Script" uid="uid://dops4xatxpfli" path="res://ui/LobbyWaitingRoom.gd" id="1"]

[node name="LobbyWaitingRoom" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="LobbyNameLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Lobby Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IPLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "IP: 192.168.1.1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Spieler:"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerList" type="VBoxContainer" parent="Panel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonBox" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="Panel/VBox/ButtonBox"]
layout_mode = 2
text = "Spiel Starten"

[node name="LeaveButton" type="Button" parent="Panel/VBox/ButtonBox"]
layout_mode = 2
text = "Verlassen"
